<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activityRow"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeightLarge"
    android:padding="6dip" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_layer_1"
        android:id="@+id/lblLayer"
        android:layout_alignParentTop="true"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_value"
        android:id="@+id/lblValue"
        android:layout_alignLeft="@id/lblLayer1"
        android:layout_below="@id/lblLayer"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/txtValue"
        android:layout_below="@id/lblLayer"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/lblValue"
        android:layout_alignParentRight="false"
        android:layout_marginRight="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_date"
        android:id="@+id/lblDate"
        android:layout_below="@id/lblValue"
        android:layout_alignLeft="@id/lblValue"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/txtDate"
        android:layout_below="@id/txtValue"
        android:layout_alignLeft="@id/txtValue"
        android:layout_alignParentRight="false"
        android:layout_marginRight="30dp" />




</RelativeLayout>